// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptModal renders 1`] = `
<body>
  <div
    aria-hidden="true"
  >
    <div
      class="Picasso-root"
    />
  </div>
  <div
    class="MuiDialog-root PicassoModal-root"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container PicassoModal-container MuiDialog-scrollPaper"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiDialog-paper PicassoModal-paper PicassoModal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse MuiPaper-elevation2"
        role="dialog"
      >
        <div
          class="PicassoModalTitle-root"
        >
          <h2
            class="m-0 text-xl text-black font-semibold"
          >
            Test title
          </h2>
        </div>
        <div
          class="PicassoModalContent-wrapper"
        >
          <div
            class="PicassoModalContent-modalContent"
          >
            <p
              class="m-0 text-md text-graphite font-regular"
            >
              Test message
            </p>
          </div>
        </div>
        <div
          class="PicassoModalAction-root"
        >
          <button
            aria-disabled="false"
            class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border border-solid text-black hover:border-black visited:text-black active:bg-gray active:border-black bg-white border-gray min-w h-8 py-0 px-4"
            data-component-type="button"
            role="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
            >
              Cancel
            </span>
          </button>
          <button
            aria-disabled="false"
            class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#27D496] active:bg-[#00A96C] bg-green min-w h-8 py-0 px-4"
            data-component-type="button"
            role="button"
            tabindex="0"
            type="button"
          >
            <span
              class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
            >
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 2`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        aria-hidden="true"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
      <div
        class="MuiDialog-root PicassoModal-root"
        role="presentation"
        style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
      >
        <div
          aria-hidden="true"
          class="MuiBackdrop-root"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        />
        <div
          data-test="sentinelStart"
          tabindex="0"
        />
        <div
          class="MuiDialog-container PicassoModal-container MuiDialog-scrollPaper"
          role="none presentation"
          style="opacity: 1; webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          tabindex="-1"
        >
          <div
            class="MuiPaper-root MuiDialog-paper PicassoModal-paper PicassoModal-small MuiDialog-paperScrollPaper MuiDialog-paperWidthFalse MuiPaper-elevation2"
            role="dialog"
          >
            <div
              class="PicassoModalTitle-root"
            >
              <h2
                class="m-0 text-xl text-black font-semibold"
              >
                Test title
              </h2>
            </div>
            <div
              class="PicassoModalContent-wrapper"
            >
              <div
                class="PicassoModalContent-modalContent"
              >
                <p
                  class="m-0 text-md text-graphite font-regular"
                >
                  Test message
                </p>
              </div>
            </div>
            <div
              class="PicassoModalAction-root"
            >
              <button
                aria-disabled="false"
                class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border border-solid text-black hover:border-black visited:text-black active:bg-gray active:border-black bg-white border-gray min-w h-8 py-0 px-4"
                data-component-type="button"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
                >
                  Cancel
                </span>
              </button>
              <button
                aria-disabled="false"
                class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#27D496] active:bg-[#00A96C] bg-green min-w h-8 py-0 px-4"
                data-component-type="button"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
                >
                  Submit
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          data-test="sentinelEnd"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt opens and closes modal on Submit action 3`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;

exports[`PromptModal showPrompt with input returns result on Submit action 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <button
        aria-disabled="false"
        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
        data-component-type="button"
        role="button"
        tabindex="0"
        type="button"
      >
        <span
          class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
        >
          Show
        </span>
      </button>
    </div>
  </div>
</body>
`;
